# rebecca

./: .gitignore  LICENSE  Makefile  README.md  Rebecca.sln  Rebecca.slnLaunch
Rebecca/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Rebecca.csproj  app.manifest
Rebecca.Package/: Package.StoreAssociation.xml  Package.appxmanifest  Rebecca.Package.wapproj
Rebecca.Package/BundleArtifacts/: x64.txt  x86.txt
Rebecca/Controllers/: FolderController.cs  HelloWorldController.cs  HotkeyController.cs  MediaLibraryController.cs  SettingsController.cs  WebSocketController.cs
Rebecca/Extensions/: ApplicationExtensions.cs  ServiceCollectionExtensions.cs
Rebecca/Models/: HotkeyAction.cs  HotkeyConfig.cs  MediaFile.cs  MediaLibraryConfig.cs  TmdbConfigRequest.cs  WebSocketMessage.cs
Rebecca/Services/: ComInterop.cs  DownloadService.cs  FileSystemService.cs  HotkeyService.cs  HttpServer.cs  LogService.cs  MediaFileRepository.cs  MediaLibraryConfigService.cs  MediaLibraryManager.cs  MediaLibraryService.cs  MediaLibraryServiceAdapter.cs  MetadataService.cs  NotificationService.cs  PortFinder.cs  ResourceHelper.cs  SettingsService.cs  StartupService.cs  (+5 more)
StdEx/: StdEx.csproj
StdEx.Tests/: StdEx.Tests.csproj
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: api_client.py  config.py
backend/deepseek_enchant/: __init__.py  api.py
backend/src/deepseek_enchant/: __init__.py
docs/: startup-guide.md
frontend/: index.html  package-lock.json  package.json
web/: index.html  package-lock.json  package.json  vite.config.ts  web.esproj
(+68 files in other folders)
