[tool.poetry]
name = "deepseek-enchant"
version = "0.1.0"
description = "DeepSeek Enchant Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
psutil = "^5.9.6"
openai = "^1.3.5"  # 使用 openai 包来调用 deepseek API
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
